force-app/main/default/objects/Timesheet__c/fields/Pay_Total__c.field-meta.xml
<CustomField>
    <fullName>Pay_Total__c</fullName>
    <label>Pay Total</label>
    <summarizedField>Timesheet_Entry__c.Net_Pay__c</summarizedField>
    <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>