force-app/main/default/objects/Timesheet__c/fields/PayPeriod_End__c.field-meta.xml
<CustomField>
    <fullName>PayPeriod_End__c</fullName>
    <inlineHelpText>Enter the Pay Period End Date here.</inlineHelpText>
    <label>PayPeriod End</label>
    <type>DateTime</type>
</CustomField>