force-app/main/default/objects/Timesheet__c/fields/PayPeriod_Start__c.field-meta.xml
<CustomField>
    <fullName>PayPeriod_Start__c</fullName>
    <inlineHelpText>Enter the Pay Period Start Date here.</inlineHelpText>
    <label>PayPeriod Start</label>
    <type>DateTime</type>
</CustomField>