force-app/main/default/objects/Timesheet__c/fields/Rate_Card_Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Per_Hour__c</fullName>
    <formula>CreatedBy.Hourly_Rate_Card__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Card Per Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>