force-app/main/default/objects/Timesheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>PayPeriod_Start__c</columns>
    <columns>PayPeriod_End__c</columns>
    <columns>Rate_Card_Per_Hour__c</columns>
    <columns>Total_Hours__c</columns>
    <columns>Pay_Total__c</columns>
    <columns>Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>